opam-version: "2.0"
name: "yabaitech_techfest11_pop"
version: "0.0.1"
synopsis: "Pop of yabaitech.tokyo for Techfest 11"
description: """
"""
maintainer: "Masaki Waga <masakiwaga@gmail.com>"
authors: [
    "Masaki Waga"
    "Yuito Murase"
]
license: "MIT License"
homepage: "https://github.com/yabaitechtokyo/techbookfest11-pop"
bug-reports: "https://github.com/yabaitechtokyo/techbookfest11-pop/issues"
dev-repo: "git+https://github.com/yabaitechtokyo/techbookfest11-pop.git"
depends: [
  "satysfi" {= "0.0.6"}
  "satyrographos" {>= "0.0.2.7" & < "0.0.3"}
  "satysfi-base" {>= "1.2.1" & < "2.0.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "cnf-stdja-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
